Document compilation inside the package

--- a/doc_tex/superchic.tex
+++ b/doc_tex/superchic.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
 
 
-\title{SuperChic v4.2 : \\ \vspace{0.5cm}A Monte Carlo for Central Exclusive Production}
+\title{SuperChic v@PROJECT_VERSION@ : \\ \vspace{0.5cm}A Monte Carlo for Central Exclusive Production}
 
 
 \usepackage{cite}
@@ -26,7 +26,7 @@
 \begin{titlepage}
 \begin{center}
 
-{\huge SuperChic v4.2} \\ \vspace{0.5cm} {\Large A Monte Carlo for Central Exclusive Production}
+{\huge SuperChic v@PROJECT_VERSION@} \\ \vspace{0.5cm} {\Large A Monte Carlo for Central Exclusive Production}
 
 \vspace{3cm}
 
@@ -51,11 +51,11 @@
 
 \section{Overview}
 
-\texttt{SuperChic 4.15} is a Fortran based Monte Carlo event generator for central exclusive and semi--exclusive production at parton level, for a range of Standard Model final states. User--defined histograms may be output, as well as unweighted events in HEPEVT and Les Houches formats. By default the program makes use of the LHAPDF library, but otherwise the code is completely stand--alone. Relevant references are listed in Section~\ref{sec:ref}.
+\texttt{SuperChic@PROJECT_VERSION@} is a Fortran based Monte Carlo event generator for central exclusive and semi--exclusive production at parton level, for a range of Standard Model final states. User--defined histograms may be output, as well as unweighted events in HEPEVT and Les Houches formats. By default the program makes use of the LHAPDF library, but otherwise the code is completely stand--alone. Relevant references are listed in Section~\ref{sec:ref}.
 
 \section{Installation}
 
-A compressed tar file containing all of the relevant code can be downloaded at \texttt{http://projects.hepforge.org/superchic/}. To extract it, simply execute \texttt{tar -xzvf superchicv4.15.tar.gz} and the \texttt{superchicv4.15} directory will be created. This consists of:
+A compressed tar file containing all of the relevant code can be downloaded at \texttt{http://projects.hepforge.org/superchic/}. To extract it, simply execute \texttt{tar -xzvf superchicv@PROJECT_VERSION@.tar.gz} and the \texttt{superchicv@PROJECT_VERSION@} directory will be created. This consists of:
 %
 \begin{itemize}
 \item \texttt{bin}: the executables \texttt{superchic} and \texttt{init} and the input card \texttt{input.DAT}.
