A lot of small changes

--- a/doc/superchic.tex
+++ b/doc/superchic.tex
@@ -11,11 +11,9 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{setspace}
-\usepackage{setspace}
 \usepackage[dvips]{graphicx}
 \usepackage{epsfig}
 \usepackage{longtable}
-\usepackage{cite}
 \usepackage{hyperref}
 
 
@@ -671,7 +669,7 @@ Further references for other specific processes are listed below:
 \begin{itemize}
 \item Mutual ion dissociation in UPCs~\cite{Harland-Langiondiss}.
 \item Exclusive and semi--exclusive $W^+ W^-$ production~\cite{Bailey:2022wqy}.
-\item Treatment proton dissociation in photon–initiated lepton pair production~\cite{Harland-Lang:2020veo}.
+\item Treatment proton dissociation in photon-initiated lepton pair production~\cite{Harland-Lang:2020veo}.
 \item SUSY particle pair production:~\cite{Harland-Lang:2018hmi}.
 \item SM Higgs boson:~\cite{HarlandLang:2013jf}.
 \item $\gamma\gamma$:~\cite{HarlandLang:2010ep,HarlandLang:2012qz}.
