--- a/doc/superchic.tex
+++ b/doc/superchic.tex
@@ -15,6 +15,8 @@
 \usepackage{epsfig}
 \usepackage{longtable}
 \usepackage{hyperref}
+\hbadness=99999
+\vbadness=99999
 
 \addtolength{\textwidth}{2.0cm}
 
