Improvement of documentation

--- a/doc/superchic.tex
+++ b/doc/superchic.tex
@@ -129,8 +129,9 @@ that set in the input card via \texttt{PDFname}, which corresponds to
 the proton PDF set used in QCD--initiated CEP. It is therefore not 
 available on the LHAPDF website list.
 
-Please note that during the test phase it is recommended to use the \texttt{-DSUPERCHIC\_DOWNLOAD\_PDFS=ON/OFF} so the 
-corresponding PDFs needed in the test will be installed automatically.
+Please note: during the test phase it is recommended to use the \\ \texttt{-DSUPERCHIC\_DOWNLOAD\_PDFS=ON/OFF} flag so the 
+corresponding PDFs needed in the test will be installed automatically. Also, it is important to admitt that the sower settings used in the tests 
+might give slightly different results depending on the used \texttt{Pythia8} version and in some cases might not work at all.
 
 \section{Running with LHAPDF}
 
