Drop HEPEVT output

--- a/doc/superchic.tex
+++ b/doc/superchic.tex
@@ -819,7 +819,7 @@ via \texttt{APFEL}. Minor updates to implementation of survival effects.
 \item Version 4.15: bug fix in spin correlations for $J/\psi$ decay to leptons in photoproduction process. Effect minimal.
 \item Version 4.2. Mutual ion dissociation in ultraperipheral ion--ion collisions included. Simplified model processes 82--84 added. Minor bug fixes.
 \item Version 5.0. Some bug fixes and updates to unweighted event (in particular HepMC) outputs  added. Builds scripts for the cmake build system  implemented.
- Tests of all the combinations of  processes and beams supported by SuperChic  implemented in the test suite.
+ Tests of all the combinations of  processes and beams supported by SuperChic  implemented in the test suite. Drop HEPEVT format output.
 
 \end{itemize}
 
