Fix bug in pA beams, update manual

--- a/doc/superchic.tex
+++ b/doc/superchic.tex
@@ -788,7 +788,7 @@ Further references for other specific processes are listed below:
 
 \section{Version Information}
 
-Here we provide details of the changes made in the releases from version 3.01 onwards:
+Here we provide details of the changes made in the releases from version 3.01 to 5.0. For more recent versions, please refer to ChangeLog:
 
 \begin{itemize}
 
