--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 Version 5.3
  - Fixed a bug in eta selection in cuts.f
+ - Fixed bug in pA beam for lepton and W pair production. Previous versions had incorrect flux.
  - The version from CMakeLists.txt is automatically propagated to the banner in head.f.
 Version 5.2
  - Beams are propagated to LHE for elastic processes.
