--- a/doc/references.bib
+++ b/doc/references.bib
@@ -13,6 +13,16 @@
     year = "2020"
 }
 
+@article{Harland-Lang:2024zpn,
+    author = "Harland-Lang, L. A.",
+    title = "{Higher precision constraints on the tau $g-2$ in LHC photon-initiated production: a full account of hadron dissociation and soft survival effects}",
+    eprint = "2410.10978",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "10",
+    year = "2024"
+}
+
 @article{Harland-Langiondiss,
     author = "Harland-Lang, L. A.",
     title = "{Exciting Ions: a Systematic Treatment of Ultraperipheral Heavy Ion Collisions with Nuclear Breakup}",
