--- a/doc/superchic.tex
+++ b/doc/superchic.tex
@@ -695,10 +695,10 @@ and \texttt{p(d)}, respectively.
 
 \subsection{Process 55: $W^+W^-$ production ($pp$)}
 
-Two--photon induced $W$ boson pair production. Both muon and electron decay channels are implemented, and set according to \texttt{wlp}, 
-\texttt{wlm} in the input card, with ${\rm Br}(W\to \nu \mu)=10.63\%$ and ${\rm Br}(W\to \nu e)=10.71\%$. Spin correlations may be  included with 
-the \texttt{spincorr} flag. Cuts on the final--state muons may be placed using the input file, with the momenta $\mu^+(9)$, $\mu^-(11)$, as 
-defined in Table~\ref{table:proc}, given by \texttt{p(a)}, \texttt{p(b)},  and similarly for the election decay channel.
+Two--photon induced $W$ boson pair production. Muon, electron and tau decay channels are implemented, and set according to \texttt{wlp}, 
+\texttt{wlm} in the input card, with ${\rm Br}(W\to \nu \mu)=10.63\%$, ${\rm Br}(W\to \nu e)=10.71\%$ and ${\rm Br}(W\to \nu \tau)=11.38\%$. Spin correlations may be  included with 
+the \texttt{spincorr} flag. Cuts on the final--state leptons may be placed using the input file, with the momenta $l^+(9)$, $l^-(11)$, as 
+defined in Table~\ref{table:proc}, given by \texttt{p(a)}, \texttt{p(b)}.
 
 \subsection{Processes 56--58: $l^+l^-$ production ($pp$)}
 
